CSS changes to fix section text alignment

--- a/css/main.css
+++ b/css/main.css
@@ -248,6 +248,7 @@ section h2 {
   bottom: 20px;
   left: 20px;
   margin: 0;
+  width: 325px;
 }
 
 .surfer {
